Refactor Devices component to include devices in SongState interface

--- a/app/style.css
+++ b/app/style.css
@@ -19,6 +19,7 @@
 }
 body {
 	font-family: SpotifyMixUI-Regular;
+	background: linear-gradient(var(--light-color), var(--dark-color), black);
 }
 
 a:hover {
