--- a/app/style.css
+++ b/app/style.css
@@ -53,7 +53,7 @@ a:hover {
 }
 .extra > button.lineActive {
 	font-size: 22px;
-	text-shadow: 0 0 var(--text-shadow-blur-radius) rgba(255, 255, 255, var(--gradient-color-alpha));
+	text-shadow: 0 0 1rem rgba(255, 255, 255, var(--glow));
 	filter: blur(0px);
 }
 .extra > button.lineActive.lineAnimate {
@@ -95,6 +95,7 @@ div.extra > button.lineActive > span.bg {
 	animation-duration: 1s;
 	animation-timing-function: cubic-bezier(0.45, 0.05, 0.55, 0.95);
 	position: relative;
+	text-shadow: 0 0 0.5rem rgba(255, 255, 255, var(--glow));
 	background-image: linear-gradient(
 		90deg,
 		rgba(
@@ -133,11 +134,7 @@ div.extra > button.lineActive > span.bg {
 		width: 10px;
 		height: 10px;
 	}
-	20% {
-		width: 15px;
-		height: 15px;
-	}
-	80% {
+	100% {
 		width: 1px;
 		height: 1px;
 	}
@@ -189,7 +186,7 @@ div.extra > button.lineActive > span.bg {
 }
 .instrumentalText.animation-end > span {
 	animation-name: animateEnd;
-	animation-duration: 1s;
+	animation-duration: 0.1s;
 	animation-timing-function: cubic-bezier(0.47, 0, 0.74, 0.71);
 	animation-iteration-count: 1;
 }
