--- a/app/style.css
+++ b/app/style.css
@@ -50,6 +50,7 @@ a:hover {
 	font-size: 16px;
 	display: flex;
 	align-items: center;
+	blur: none;
 }
 .extra > button.lineActive {
 	font-size: 22px;
